# YGM-Grace-Project

data/: terrorist_network.csv
data/Burkhardt_test_correctness/: borgatti-mapping.txt  borgatti.csv  borgatti.edges  dolphins.edges  terrorist_network.csv  terrorist_network.edges  zachary_karate.csv
include/ygm-gctc/: kronecker_edge_generator.hpp  kronecker_edge_generator_testing.hpp  rmat_edge_generator.hpp
src/: CMakeLists.txt  bareiss.cpp  grey_wolf.cpp  testing.cpp  triangle_centrality.cpp  ygm_graph_challenge_tc.cpp  ygm_graph_challenge_tc_testing.cpp  zachary_karate.csv
